--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link type="text/css" rel="stylesheet" href="assets/css/style.css">
     <link type="text/css" rel="stylesheet" href="assets/css/fonts.css">
-
+    <link type="text/css" rel="stylesheet" href="assets/css/responsive.css">
     <title>GearGo</title>
 </head>
 
 <body>
-    <div class="header-wrapper">
+    <div class="home-wrapper">
         <header class="navbar-header">
             <nav class="navbar navbar-expand-lg navbar-light" role="navigation">
-                <div class="container-fluid container-mod">
+                <div class="container container-mod">
                     <a class="navbar-logo" href="#">
                         <svg width="105" height="30" viewBox="0 0 105 30" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -60,11 +60,17 @@
                         </svg>
                     </a>
 
-                    <div class="navbar-expand" id="navbarNav">
-                        <ul class="navbar-nav">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
                             <li class="nav-item dropdown">
-                                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">Products
+                                <a class="nav-link me-3" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    <span>Products</span>
                                     <i class="fas fa-chevron-down" style="color: #37474f; font-size: 10px;"></i>
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -78,9 +84,9 @@
                             </li>
 
                             <li class="nav-item dropdown">
-                                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Our Solutions
+                                <a class="nav-link me-3" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    <span>Our Solutions</span>
                                     <i class="fas fa-chevron-down" style="color: #37474f; font-size: 10px;"></i>
                                 </a>
 
@@ -90,46 +96,141 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Download</a>
+                                <a class="nav-link me-3" href="#"><span>Download</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Blogs</a>
+                                <a class="nav-link me-3" href="#"><span>Blogs</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link me-3" href="#"><span>Contact</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-danger btn-mod" href="#">Login</a>
+                                <a class="btn btn-danger btn-mod" href="#">
+                                    Login
+                                </a>
                             </li>
                         </ul>
-                    </div>
-                </div>
+                    </div><!--collapse navbar-->
+                </div><!--container-->
             </nav>
-
-        </header>
-        <main>
+        </header><!--navbar-header-->
+        <main class="main-wrapper">
             <div class="container container-mod">
                 <div class="row">
-                    <div class="col-lg-7">
+                    <div class="col-lg-7 col-md-6 col-sm-12 col-xl-12">
                         <!-- Content of the first column -->
-                        <h1 class="main-heading-title">Keep All Controls <span class="block">Of Your Vehicles</span> In
-                            your Hand!</h1>
-                        <div class="main-heading-btn">
-                            <a href="#"><img alt="google-play" src="/assets/images/google-play.png"></a>
-                            <a href="#"><img alt="apple-store" src="/assets/images/app-store.png"></a>
-                        </div>
-                        <div class="main-heading-text"><img alt="banner-logo" src="/assets/images/logo-banner.png">
-                            <h3>now avaiable on</h3>
+                        <div class="main-heading-wrapper col-sm-12 col-xl-12">
+                            <h1 class="main-heading-title">Keep All Controls <span class="block primarycolor">Of Your
+                                    Vehicles</span>
+                                In
+                                your Hand!</h1>
+                            <div class="main-heading-btn">
+                                <a href="#"><img alt="google-play" src="assets/images/google-play.png"></a>
+                                <a href="#"><img alt="apple-store" src="assets/images/app-store.png"></a>
+                            </div>
+                            <div class="main-heading-text">
+                                <img alt="banner-logo" src="assets/images/logo-banner.png">
+                                <h3>now avaiable on</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="gps-box-wrap">
+                    <img alt="gps-img" src="assets/images/gps-img2.png">
+                </div>
             </div>
-            <div class="gps-box-wrap">
-                <img class="gps-box" alt="gps-img" src="assets/images/gps-img2.png">
+            <div class="main-vector">
+                <svg width="343" height="741" viewBox="0 0 343 741" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M593.484 497.375C527.902 597.552 422.626 671.821 277.655 720.183C132.685 768.544 46.3926 718.456 18.7791 569.917C-8.83434 421.379 -0.205136 286.658 44.6667 165.755C89.5386 44.8512 177.556 -8.69175 308.72 5.12577C439.884 18.9433 536.531 79.395 598.662 186.481C660.792 293.567 659.066 397.198 593.484 497.375Z"
+                        fill="#E15352" fill-opacity="0.1" stroke="#FFD5CE" stroke-width="5" />
+                </svg>
             </div>
-        </main>
-    </div>
+        </main><!--main-wrapper-->
 
+        <div class="chat-wrappers">
+            <svg width="116" height="117" viewBox="0 0 116 117" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d_788_5503)">
+                    <path
+                        d="M14.8038 66.059C11.0159 55.6517 13.0679 44.0141 20.1869 35.53L29.3173 24.6489C36.4363 16.1648 47.5408 12.1231 58.4477 14.0463L72.4362 16.5128C83.3432 18.436 92.3957 26.0319 96.1836 36.4392L101.042 49.7869C104.83 60.1942 102.778 71.8318 95.6587 80.3159L86.5283 91.1971C79.4093 99.6812 68.3048 103.723 57.3979 101.8L43.4094 99.3331C32.5024 97.4099 23.4499 89.814 19.662 79.4067L14.8038 66.059Z"
+                        fill="#E15352" />
+                </g>
+                <g clip-path="url(#clip0_788_5503)">
+                    <path
+                        d="M40.0016 57.46C40.0016 47.425 47.8616 40 58.0016 40C68.1416 40 76.0016 47.425 76.0016 57.46C76.0016 67.495 68.1416 74.92 58.0016 74.92C56.2452 74.9235 54.4963 74.6914 52.8016 74.23C52.4825 74.1441 52.1435 74.1706 51.8416 74.305L48.2516 75.88C48.0351 75.9763 47.7982 76.0178 47.5618 76.0006C47.3255 75.9834 47.0971 75.9082 46.8968 75.7816C46.6965 75.655 46.5305 75.4809 46.4136 75.2748C46.2967 75.0687 46.2325 74.8369 46.2266 74.6L46.1216 71.4C46.1135 71.2066 46.0668 71.0168 45.9844 70.8416C45.902 70.6665 45.7854 70.5095 45.6416 70.38C43.8364 68.7517 42.3995 66.7569 41.4269 64.5288C40.4543 62.3008 39.9684 59.8908 40.0016 57.46ZM52.4816 54.175L47.2016 62.575C47.0928 62.7428 47.047 62.9437 47.0724 63.142C47.0978 63.3404 47.1927 63.5233 47.3403 63.6583C47.4878 63.7932 47.6785 63.8715 47.8783 63.8791C48.0781 63.8868 48.2742 63.8233 48.4316 63.7L54.1166 59.395C54.3029 59.2493 54.5326 59.1701 54.7691 59.1701C55.0056 59.1701 55.2353 59.2493 55.4216 59.395L59.6216 62.545C59.9203 62.767 60.2615 62.925 60.624 63.0092C60.9865 63.0934 61.3625 63.102 61.7284 63.0344C62.0944 62.9669 62.4425 62.8246 62.751 62.6165C63.0595 62.4084 63.3218 62.139 63.5216 61.825L68.8016 53.425C68.9088 53.2571 68.9533 53.0568 68.9274 52.8593C68.9014 52.6618 68.8066 52.4798 68.6596 52.3454C68.5126 52.2109 68.3229 52.1327 68.1239 52.1244C67.9248 52.1161 67.7293 52.1783 67.5716 52.3L61.8866 56.6C61.7032 56.7457 61.4758 56.825 61.2416 56.825C61.0074 56.825 60.78 56.7457 60.5966 56.6L56.3966 53.45C56.0979 53.2244 55.7556 53.0633 55.3913 52.977C55.0271 52.8908 54.6489 52.8812 54.2807 52.9489C53.9126 53.0166 53.5625 53.1601 53.2528 53.3703C52.9431 53.5805 52.6805 53.8529 52.4816 54.17V54.175Z"
+                        fill="white" />
+                </g>
+                <defs>
+                    <filter id="filter0_d_788_5503" x="3.93359" y="7.57471" width="109.979" height="108.697"
+                        filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                            result="hardAlpha" />
+                        <feOffset dx="1" dy="4" />
+                        <feGaussianBlur stdDeviation="5" />
+                        <feComposite in2="hardAlpha" operator="out" />
+                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_788_5503" />
+                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_788_5503" result="shape" />
+                    </filter>
+                    <clipPath id="clip0_788_5503">
+                        <rect width="36.002" height="36.004" fill="white" transform="translate(40 40)" />
+                    </clipPath>
+                </defs>
+            </svg>
+        </div><!--chat-wrappers-->
+    </div><!--home-wrapper-->
+    <section class="why-choose-section">
+        <div class="container container-mod">
+            <div class="sub-heading">
+                <h2 class="primarycolor"><span class="line"></span>why choose GearGo GPS?<span class="line"></span></h2>
+                <div class="description">
+                    <p>
+                        As a leading GPS tracking company in Nepal, Trackon GPS holds the strongest position amongst
+                        similar
+                        companies. Since our launch in 2021, we have always focused on providing excellent Customer
+                        Service
+                        and upgrading various Products Features.
+                    </p>
+                </div>
+            </div>
+
+            <div class="why-choose-box">
+                <ul class="why-choose-list">
+                    <li class="why-choose-list-item">
+                        <img>
+                        <p>500+</p>
+                        <span>App Downloads</span>
+                    </li>
+                    <li class="why-choose-list-item">
+                        <img>
+                        <p>100+</p>
+                        <span>Small Businesses</span>
+                    </li>
+                    <li class="why-choose-list-item">
+                        <img>
+                        <p>20+</p>
+                        <span>B2B Business</span>
+                    </li>
+                    <li class="why-choose-list-item">
+                        <img>
+                        <p>10+</p>
+                        <span>National Wide Dealers</span>
+                    </li>
+                    <li class="why-choose-list-item">
+                        <img>
+                        <p>1000+</p>
+                        <span>Devices Online</span>
+                    </li>
+                    <li class="why-choose-list-item">
+                        <img>
+                        <p>500+</p>
+                        <span>Daily Active Users</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section><!--why-choose-section-->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
