changes in responsive added script.js

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item dropdown">
-                                <a class="nav-link me-3" href="#" role="button" data-bs-toggle="dropdown"
+                                <a class="nav-link me-3 icon-up" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
                                     <span>Products</span>
                                     <i class="fas fa-chevron-down" style="color: #37474f; font-size: 10px;"></i>
@@ -234,5 +234,6 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
+<script src="assets/js/script.js"></script>
 
 </html>
